--- a/statewalker/pom.xml
+++ b/statewalker/pom.xml
@@ -4,13 +4,13 @@
     <url>https://javabits.fontysvenlo.org/statewalker</url>
     <parent>
         <groupId>nl.fontys.sebivenlo</groupId>
-        <artifactId>statewalkerparent</artifactId>
-        <version>1.1</version>
-        <relativePath>..</relativePath>
+        <artifactId>sebipom</artifactId>
+        <version>1.3.1</version>
+        <relativePath>../sebipom</relativePath>
     </parent>
     <groupId>nl.fontys.sebivenlo</groupId>
     <artifactId>statewalker</artifactId>
-    <version>3.0</version>
+    <version>3.1</version>
     <packaging>jar</packaging>
     <name>SEBIVenlo :: Statewalker</name>
     <properties>
