--- a/statewalkertest/pom.xml
+++ b/statewalkertest/pom.xml
@@ -4,15 +4,15 @@
     <url>https://javabits.fontysvenlo.org/statewalkertest</url>
     <parent>
         <groupId>nl.fontys.sebivenlo</groupId>
-        <artifactId>statewalkerparent</artifactId>
-        <version>1.1</version>
-        <relativePath>..</relativePath>
+        <artifactId>sebipom</artifactId>
+        <version>1.3.1</version>
+        <relativePath>../sebipom</relativePath>
     </parent>
 
     <name>SEBIVenlo :: StatewalkerTest</name>
     <groupId>nl.fontys.sebivenlo</groupId>
     <artifactId>statewalkertest</artifactId>
-    <version>3.0</version>
+    <version>3.1</version>
     <packaging>jar</packaging>
     <properties>
         <pitTargetClasses>nl.fontys.sebivenlo.**</pitTargetClasses>
