--- a/statewalker/pom.xml
+++ b/statewalker/pom.xml
@@ -5,19 +5,19 @@
     <parent>
         <groupId>nl.fontys.sebivenlo</groupId>
         <artifactId>sebipom</artifactId>
-        <version>1.3.4</version>
+        <version>1.4.4</version>
         <relativePath>../sebipom</relativePath>
     </parent>
     <groupId>nl.fontys.sebivenlo</groupId>
     <artifactId>statewalker</artifactId>
-    <version>3.3</version>
+    <version>3.4</version>
     <packaging>jar</packaging>
     <name>SEBIVenlo :: Statewalker</name>
     <properties>
         <pitTargetClasses>nl.fontys.sebivenlo.**</pitTargetClasses>
         <settings.localRepository>/home/hom/.m2/repository</settings.localRepository>
     </properties>
-    <build>
+<!--    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -62,5 +62,5 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+    </profiles>-->
 </project>
