--- a/statewalker/pom.xml
+++ b/statewalker/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <groupId>nl.fontys.sebivenlo</groupId>
         <artifactId>sebipom</artifactId>
-        <version>1.3.4</version>
-        <relativePath>../sebipom</relativePath>
+        <version>1.4.8</version>
+        <relativePath/>
     </parent>
     <groupId>nl.fontys.sebivenlo</groupId>
     <artifactId>statewalker</artifactId>
@@ -15,32 +15,8 @@
     <name>SEBIVenlo :: Statewalker</name>
     <properties>
         <pitTargetClasses>nl.fontys.sebivenlo.**</pitTargetClasses>
-        <settings.localRepository>/home/hom/.m2/repository</settings.localRepository>
+        <publish-url>fontysvenlo.org/home/javabits/public_html/</publish-url>
     </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                    <compilerArgs>
-                        <arg>-XDcompilePolicy=simple</arg>
-                        <arg>-Xplugin:ErrorProne</arg>
-                    </compilerArgs>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>com.google.errorprone</groupId>
-                            <artifactId>error_prone_core</artifactId>
-                            <version>2.3.2</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <profiles>
         <profile>
             <id>jdk8</id>
